--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ mysql-connector-python==8.3.0
 psycopg2-binary==2.9.9
 sqlalchemy==2.0.30
 pandas==2.2.0
-numpy==1.24.3
+numpy>=1.26.0,<2.0.0
 Pillow==10.0.0
 openpyxl==3.1.2
 torch>=1.9.0
