--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ easyocr==1.7.1
 opencv-python==4.8.1.78
 streamlit==1.31.0
 mysql-connector-python==8.3.0
-psycopg2-binary==2.9.9
+psycopg2==2.9.9
 sqlalchemy==2.0.30
 pandas==2.2.0
 numpy>=1.26.0,<2.0.0
