--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ psycopg2==2.9.9
 sqlalchemy==2.0.30
 pandas==2.2.0
 numpy>=1.26.0,<2.0.0
-Pillow==10.0.0
-openpyxl==3.1.2
+Pillow>=10.2.0
+openpyxl>=3.1.2
 torch>=1.9.0
 torchvision>=0.10.0
 scipy>=1.7.0
